--- a/eq/client/CMakeLists.txt
+++ b/eq/client/CMakeLists.txt
@@ -23,7 +23,8 @@ add_definitions(-DEQ_PLUGIN_BUILD -DBOOST_PROGRAM_OPTIONS_DYN_LINK)
 
 set(EQ_LIBRARIES EqualizerFabric ${EQ_GL_LIBRARIES}
   ${PTHREAD_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY}
-  ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${GLEW_LIBRARY})
+  ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY}
+  ${GLEW_LIBRARY})
 
 if(MAGELLAN_FOUND)
   include_directories(${MAGELLAN_INCLUDE_DIR})
