--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
 /tests export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
+.travis.yml merge=ours
+CMake/FindPackages.cmake merge=ours
+CMake/FindRequired.cmake merge=ours
+CMake/GitExternal.cmake merge=ours
+CMake/depends.txt merge=ours
