--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq autoconf || /bin/true
  - sudo apt-get install -qq automake || /bin/true
+ - sudo apt-get install -qq avahi-daemon || /bin/true
  - sudo apt-get install -qq bison || /bin/true
  - sudo apt-get install -qq clang || /bin/true
  - sudo apt-get install -qq clang-format-3.5 || /bin/true
