Make discovery for resources, plugins and server library relocatable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,11 +43,6 @@ else()
   list(APPEND FIND_PACKAGES_DEFINES EQ_1_0_API)
 endif()
 
-
-if(RELEASE_VERSION)
-  set(EQ_DEFINITIONS -DEQ_RELEASE)
-endif()
-
 include(configure)
 
 list(APPEND CPPCHECK_EXTRA_ARGS -DEQUALIZERFABRIC_STATIC=)
@@ -86,20 +81,13 @@ if(EQ_QT_USED)
   set(EQ_FEATURES "${EQ_FEATURES} Qt")
 endif()
 
-list(APPEND EQ_DEFINITIONS
-  -DEQ_BUILD_DIR="${CMAKE_BINARY_DIR}/" -DEQ_SOURCE_DIR="${CMAKE_SOURCE_DIR}/")
+list(APPEND EQ_DEFINITIONS -DEQ_BUILD_DIR="${CMAKE_BINARY_DIR}/")
 
 if(EQUALIZER_BUILD_2_0_API)
   list(APPEND EQ_DEFINITIONS -DEQ_2_0_API)
   set(EQ_FEATURES "${EQ_FEATURES} APIv2")
 else()
   set(EQ_FEATURES "${EQ_FEATURES} APIv1")
-endif()
-if(IS_ABSOLUTE ${CMAKE_INSTALL_PREFIX})
-  list(APPEND EQ_DEFINITIONS -DEQ_INSTALL_DIR="${CMAKE_INSTALL_PREFIX}/")
-else()
-  list(APPEND EQ_DEFINITIONS
-    -DEQ_INSTALL_DIR="${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_PREFIX}/")
 endif()
 add_definitions(${EQ_DEFINITIONS})
 
