Use local server directly from server library rather than dlopen it

--- a/eq/client/CMakeLists.txt
+++ b/eq/client/CMakeLists.txt
@@ -21,7 +21,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/version.in.h
 
 add_definitions(-DEQ_PLUGIN_BUILD -DBOOST_PROGRAM_OPTIONS_DYN_LINK)
 
-set(EQ_LIBRARIES EqualizerFabric ${EQ_GL_LIBRARIES}
+set(EQ_LIBRARIES EqualizerFabric EqualizerServer ${EQ_GL_LIBRARIES}
   ${PTHREAD_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY}
   ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY}
   ${GLEW_LIBRARY})
